@startuml

title __CONTROLLERS's Class Diagram__\n

  package com.alestrio.isotope {
    package com.alestrio.isotope.controllers {
      class ControllerLauncher {
          ~ v : Button
          ~ mp : Button
          ~ quit : Button
          - vBtnClick()
          - mpButtonClick()
          - quitButtonClick()
      }
    }
  }
  

  package com.alestrio.isotope {
    package com.alestrio.isotope.controllers {
      class ControllerMP {
          ~ tabBase : TabPane
          ~ aldb : ArrayList<Database>
          - tableR : TableView<RectangularPiece>
          - typeColumnR : TableColumn<RectangularPiece, String>
          - lengthColumnR : TableColumn<RectangularPiece, String>
          - remainingLengthColumnR : TableColumn<RectangularPiece, String>
          - widthColumnR : TableColumn<RectangularPiece, String>
          - remainingWidthColumnR : TableColumn<RectangularPiece, String>
          - thicknessColumnR : TableColumn<RectangularPiece, String>
          - remainingThicknessColumnR : TableColumn<RectangularPiece, String>
          - colorColumnR : TableColumn<RectangularPiece, String>
          - qtyColumnR : TableColumn<RectangularPiece, String>
          - priceCmColumnR : TableColumn<RectangularPiece, String>
          - totalPriceColumnR : TableColumn<RectangularPiece, String>
          - tableC : TableView<Cylinder>
          - diameterColumnC : TableColumn<Cylinder, String>
          - lengthColumnC : TableColumn<Cylinder, String>
          - remainingLengthColumnC : TableColumn<Cylinder, String>
          - typeColumnC : TableColumn<Cylinder, String>
          - colorColumnC : TableColumn<Cylinder, String>
          - priceCmColumnC : TableColumn<Cylinder, String>
          - totalPriceColumnC : TableColumn<Cylinder, String>
          - qtyColumnC : TableColumn<Cylinder, String>
          - tableF : TableView<FilamentSpool>
          - typeColumnF : TableColumn<FilamentSpool, String>
          - colorColumnF : TableColumn<FilamentSpool, String>
          - diameterColumnF : TableColumn<FilamentSpool, String>
          - weightColumnF : TableColumn<FilamentSpool, String>
          - remainingWeightColumnF : TableColumn<FilamentSpool, String>
          - priceCmColumnF : TableColumn<FilamentSpool, String>
          - totalPriceColumnF : TableColumn<FilamentSpool, String>
          - qtyColumnF : TableColumn<FilamentSpool, String>
          + initialize()
          ~ clickAddBtnSpool()
          ~ clickAddBtnRec()
          ~ clickAddBtnCylinder()
          ~ clickModBtnR()
          ~ clickModBtnC()
          ~ clickModBtnF()
          ~ clickDelBtnR()
          ~ clickDelBtnC()
          ~ clickDelBtnF()
          ~ clickDuplicateBtnR()
          ~ clickDuplicateBtnC()
          ~ clickDuplicateBtnF()
          ~ clickTotalValueR()
          ~ clickTotalValueC()
          ~ clickTotalValueF()
          ~ clickConnectionBtn()
          - showDbEntriesRec()
          - showDbEntriesCylinders()
          - showDbEntriesSpool()
          - showDbEntries()
          ~ clickAddDbButton()
      }
    }
  }
  

  package com.alestrio.isotope {
    package com.alestrio.isotope.controllers {
      class ControllerV {
          - tableS : TableView<Screw>
          - headColumnS : TableColumn<Screw, String>
          - diamColumnS : TableColumn<Screw, String>
          - lengthColumnS : TableColumn<Screw, String>
          - typeColumnS : TableColumn<Screw, String>
          - colorColumnS : TableColumn<Screw, String>
          - qtyColumnS : TableColumn<Screw, String>
          - totalPriceColumn : TableColumn<Screw, String>
          - priceColumn : TableColumn<Screw, String>
          + initialize()
          ~ clickAddButton()
          ~ clickDelButton()
          + showDbEntriesScrews()
          ~ clickModifyButton()
          ~ clickTotalValue()
          ~ clickDuplicateBtn()
          ~ clickDestockBtn()
          ~ clickStockBtn()
      }
    }
  }
  

  ControllerLauncher o-- DB : db
  ControllerMP o-- DB : db
  ControllerMP o-- XmlSettings : settings
  ControllerV o-- DB : db


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
